# order_tele_bot

./: .gitignore  pyproject.toml  readme.txt  setup.cfg
diagrams/: class_diagram.uml  diagram.uml
order_tele_bot/: handlers.py  main.py  markup.py  metaclasses.py  router.py
order_tele_bot/config/: settings.py
order_tele_bot/db/: __init__.py  core.py  mixins.py  tables.py
