[tool.poetry]
name = "order_tele_bot"
version = "0.1.0"
description = ""
authors = ["MaxST <mstolpasov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dynaconf = "^2.1"
pytelegrambotapi = "^3.6.6"
sqlalchemy = "^1.3.8"
emoji = "^0.5.4"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.2"
jedi = "^0.15"
yapf = "^0.28.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
